<resources>
    <string name="app_name">SiReMu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_playlists">Mis playlists</string>
    <string name="menu_me_gusta">Me gusta</string>
    <string name="menu_mis_canciones">Mis canciones</string>
    <string name="menu_historial">Mi historial</string>
    <string name="menu_buscar">Buscar</string>

    <string name="menu_creador_contenido">Creador de contenido</string>
    <string name="menu_albumes">Mis albums</string>
    <string name="menu_subir_cancion">Subir canción</string>

    <string name="excepcion_no_conexion_servidor">Error al conectar al servidor. Compruebe su conexión a internet e inténtelo de nuevo más tarde.</string>

    <string name="excepcion_no_archivo">Error al cargar la imagen seleccionada. Busque otra imagen e inténtelo de nuevo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compa_ia_discografica">Compañia discografica</string>
    <string name="fecha_de_lanzamiento">Fecha de lanzamiento</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="agregar_lbum">Agregar Álbum</string>
    <string name="nombre_del_lbum">Nombre del álbum</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="imagen">Imagen</string>
    <string name="subir_archivo">Subir archivo</string>
</resources>
